// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div>
  Boop
  <div>
    "i'm not exported"
  </div>
</div>
`;

exports[`renders NotExportedComponent 1`] = `
<div>
  "i'm not exported"
</div>
`;
